# MediaStateT

./: .gitignore  CMakeLists.txt  MediaStateT-Generate.iss  README.md  app_config.cfg  config.txt  media_stateT.qrc
Libraries/FFMPEG/doc/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  mailing-list-faq.html
Libraries/FFMPEG/include/libavcodec/: avcodec.h  codec.h
Libraries/FFMPEG/include/libavformat/: avformat.h
Libraries/FFMPEG/include/libavutil/: buffer.h  ffversion.h  log.h
Libraries/FFMPEG/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
Libraries/Libcurl_7.78_dll_x64/include/curl/: curl.h  easy.h  multi.h
Libraries/Libcurl_7.78_dll_x64/lib/: libcurl.exp
Libraries/PersonalLibraries/AudioSource/: AudioSource.cpp
Libraries/PersonalLibraries/AudioSource/include/: AudioSource.h
Libraries/PersonalLibraries/FileBasicInformation/: FileBasicInformation.cpp
Libraries/PersonalLibraries/FileBasicInformation/include/: FileBasicInformation.h
Libraries/PersonalLibraries/Netease_Music_info/: Netease_Music_info.cpp
Libraries/PersonalLibraries/Netease_Music_info/include/: Netease_Music_info.h
Libraries/PersonalLibraries/QQ_Music_info/: QQ_Music_info.cpp
Libraries/PersonalLibraries/QQ_Music_info/include/: QQ_Music_info.h
Libraries/PersonalLibraries/StartWithSystem/: StartWithSystem.cpp
Libraries/PersonalLibraries/StartWithSystem/include/: StartWithSystem.h
Libraries/QHotkey/: CMakeLists.txt
Libraries/fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib
icon/: icon_setting.rc
include/: Acrylic.h  FFTW_Call.h  InfoCommunication.h  InfoCommunicationThreadInterface.h  MtBoardConnect.h  MtFrequencyForQml.h  MtFrequencyInfo.h  MtFrequencyThreadInterface.h  MtMediaInfo.h  WindowCompositionAttribute.h
out_back/QtQuick/VirtualKeyboard/: plugins.qmltypes
out_back/QtQuick/VirtualKeyboard/Plugins/Pinyin/: plugins.qmltypes
out_back/QtQuick/VirtualKeyboard/Settings/: plugins.qmltypes
out_back/translations/: qt_de.qm
qml/: PageAudioFrequency.qml  PageMenu.qml  PopWindow.qml  TextScroll.qml  media_stateT.qml
src/: Acrylic.cpp  FFTW_Call.cpp  InfoCommunication.cpp  InfoCommunicationThreadInterface.cpp  MtBoardConnect.cpp  MtFrequencyForQml.cpp  MtFrequencyInfo.cpp  MtFrequencyThreadInterface.cpp  MtMediaInfo.cpp  main.cpp
